# agorabot

./: README  README.md
ros/: .rosinstall  setup.bash  (+6 more)
ros/octomap_mapping-experimental/octomap/: CMakeLists.txt
ros/octomap_mapping-experimental/octomap/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/.svn/text-base/: manifest.xml.svn-base
ros/octomap_mapping-experimental/octomap/include/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/include/octomap/: CountingOcTree.h  OcTree.h  OcTreeBase.h  OcTreeBase.hxx  OcTreeBaseSE.h  OcTreeBaseSE.hxx  OcTreeDataNode.h  OcTreeDataNode.hxx  OcTreeFileIO.h  OcTreeFileIO.hxx  OcTreeKey.h  OcTreeLUT.h  OcTreeLabeled.h  OcTreeNode.h  OcTreeNodeLabeled.h  OcTreeNodeStamped.h  OcTreeStamped.h  OccupancyOcTreeBase.h  OccupancyOcTreeBase.hxx  Pointcloud.h  ScanGraph.h  octomap.h  octomap_types.h  octomap_utils.h
ros/octomap_mapping-experimental/octomap/include/octomap/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/include/octomap/.svn/text-base/: OcTreeDataNode.h.svn-base  OcTreeNodeLabeled.h.svn-base
ros/octomap_mapping-experimental/octomap/include/octomap/math/: Pose6D.h  Quaternion.h  Utils.h  Vector3.h
ros/octomap_mapping-experimental/octomap/include/octomap/math/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/src/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/src/octomap/: CountingOcTree.cpp  OcTree.cpp  OcTreeLUT.cpp  OcTreeLabeled.cpp  OcTreeNode.cpp  OcTreeNodeLabeled.cpp  OcTreeNodeStamped.cpp  OcTreeStamped.cpp  Pointcloud.cpp  ScanGraph.cpp  binvox2bt.cpp  bt2vrml.cpp  edit_octree.cpp  graph2tree.cpp  labeled_demo.cpp  log2graph.cpp  offset_graph.cpp  simple.cpp
ros/octomap_mapping-experimental/octomap/src/octomap/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octomap/src/octomap/.svn/text-base/: OcTree.cpp.svn-base  OcTreeNode.cpp.svn-base  graph2tree.cpp.svn-base
ros/octomap_mapping-experimental/octomap/src/octomap/math/: Pose6D.cpp  Quaternion.cpp  Vector3.cpp
ros/octomap_mapping-experimental/octomap/src/octomap/math/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/: CMakeLists.txt  manifest.xml
ros/octomap_mapping-experimental/octovis/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/CMakeModules/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/include/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/src/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/src/octovis/: CameraFollowMode.h  OcTreeDrawer.cpp  PointcloudDrawer.cpp  PointcloudDrawer.h  SceneObject.cpp  SceneObject.h  TrajectoryDrawer.cpp  ViewerGui.h  ViewerSettingsPanel.cpp  ViewerSettingsPanel.h  ViewerSettingsPanelCamera.h  ViewerWidget.h  main.cpp
ros/octomap_mapping-experimental/octovis/src/octovis/.svn/: all-wcprops  entries
ros/octomap_mapping-experimental/octovis/src/octovis/.svn/text-base/: CameraFollowMode.cpp.svn-base  OcTreeDrawer.h.svn-base  TrajectoryDrawer.h.svn-base  ViewerGui.cpp.svn-base  ViewerSettings.cpp.svn-base  ViewerSettings.h.svn-base  ViewerSettingsPanelCamera.cpp.svn-base  ViewerWidget.cpp.svn-base
ros/octomap_mapping-experimental/octovis/src/octovis/icons/.svn/: all-wcprops  entries
ros/rein/: CMakeLists.txt  CMakeListsNew.txt  CMakeListsOld.txt  mainpage.dox  nodelets.xml
ros/rein/.svn/: all-wcprops  entries
ros/rein/.svn/text-base/: ROS_BUILD_BLACKLIST.svn-base  manifest.xml.svn-base
ros/rein/cfg/.svn/: all-wcprops  entries
ros/rein/docs/: BinarizedGradientGridConfig-usage.dox  BinarizedGradientGridConfig.wikidoc
ros/rein/docs/.svn/: all-wcprops  entries
ros/rein/docs/.svn/text-base/: BinarizedGradientGridConfig.dox.svn-base
ros/rein/etc/: camera_matrix.yaml
ros/rein/etc/.svn/: all-wcprops  entries
ros/rein/include/.svn/: all-wcprops  entries
ros/rein/include/rein/.svn/: all-wcprops  entries
ros/rein/include/rein/algorithms/.svn/: all-wcprops  entries
ros/rein/include/rein/algorithms/.svn/text-base/: tabletop_attention.h.svn-base
ros/rein/include/rein/core/: detector.h  trainable.h  types.h
ros/rein/include/rein/core/.svn/: all-wcprops  entries
ros/rein/include/rein/core/.svn/text-base/: attention_operator.h.svn-base
ros/rein/include/rein/io/: model_storage.h  serialization_support.h
ros/rein/include/rein/io/.svn/: all-wcprops  entries
ros/rein/include/rein/io/.svn/text-base/: fs_model_storage.h.svn-base
ros/rein/include/rein/nodelets/: attention_operator.h  detector.h  nodelet_base.h  tabletop_attention_nodelet.h  trainer_server.h
ros/rein/include/rein/nodelets/.svn/: all-wcprops  entries
ros/rein/launch/: tabletop.launch  tabletop_standalone_gdb.sh
ros/rein/launch/.svn/: all-wcprops  entries
ros/rein/launch/.svn/text-base/: select3dobj.launch.svn-base  tabletop_standalone.sh.svn-base  trainer_gui.launch.svn-base
ros/rein/msg/: Mask.msg
ros/rein/msg/.svn/: all-wcprops  entries
ros/rein/scripts/: display_masks.py  publish_null_masks.py  trainer_frame.py  trainer_gui.py  trainer_gui.wxg
ros/rein/scripts/.svn/: all-wcprops  entries
ros/rein/scripts/.svn/text-base/: publish_image_sync.py.svn-base  wx_opencv.py.svn-base
ros/rein/src/.svn/: all-wcprops  entries
ros/rein/src/algorithms/.svn/: all-wcprops  entries
ros/rein/src/algorithms/.svn/text-base/: tabletop_attention.cpp.svn-base
ros/rein/src/io/: fs_model_storage.cpp
ros/rein/src/io/.svn/: all-wcprops  entries
ros/rein/src/nodelets/.svn/: all-wcprops  entries
ros/rein/src/nodelets/.svn/text-base/: detector.cpp.svn-base  tabletop_attention_nodelet.cpp.svn-base
ros/rein/src/tools/: grabcut.cpp  point_cloud_resync.cpp  select3dobj.cpp
ros/rein/src/tools/.svn/: all-wcprops  entries
ros/rein/src/tools/.svn/text-base/: clean_segmentation.cpp.svn-base  detection_displayer.cpp.svn-base  pc_projector.cpp.svn-base  save_bag_data.cpp.svn-base
ros/rein/srv/.svn/: all-wcprops  entries
ros/rein/srv/.svn/text-base/: StartTraining.srv.svn-base  TrainInstance.srv.svn-base
(+546 files in other folders)
